style.css
/* Styles go here */

* {
    font-family: 'Cherry Swash', sans-serif;
    transition-duration: 0.3s;
}

html {
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    color: white;
}

body {
    margin: 0;
    position: relative;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: inherit;
}

.banner {
    width: 100%;
}

.background-img {
    width: 100%;
    height: 100%;
    background: url("images/background-circles.jpg") no-repeat fixed;
    background-size: cover;
}

.content-container {
    max-width: 800px;
    margin: 0 auto;
    overflow-x: hidden;
}

.menu-button {
    display: none;
    position: absolute;
    top: 0;
    right: 0;
}

.menu-button .bar {
    width: 30px;
    height: 5px;
    background-color: white;
    margin: 5px;
}

.nav-container {
    position: absolute;
    padding: 100px 0 0 0;
    z-index: 1;
}

nav {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

nav a {
    width: 130px;
    background: rgba(195, 195, 195, 0.5);
}

nav a:hover {
    background: rgba(195, 195, 195, 0.7);
}

.logo {
    font-size: 2em;
    text-align: center;
    padding: 40px 10px;
    margin: 10px 0;
}

.nav-item {
    font-family: Arial;
    width: 110px;
    padding: 20px 20px;
}

main {
    margin: 0 0 0 200px;
}

header {
    font-size: 1.7em;
}

.title {
    text-align: center;
    font-weight: normal;
}

.content {
    position: relative;
    height: 100%;
    width: 100%;
}

.content .circle {
    width: 400px;
    height: 400px;
    border-radius: 50%;
}

.content .rounded {
    width: 470px;
    height: 300px;
    border-radius: 140px;
}

/* Wedding page */

.wedding-info {
    margin: 0 auto;
    text-align: center;
    font-size: 1.3em;
    overflow: hidden;
    color: black;
    background: white;
}

.wedding-info div, .wedding-info form {
    position: relative;
}

.wedding-info .date {
    top: 50px;
}

.wedding-info .location {
    top: 40px;
    font-size: 1.1em;
}

.wedding-info .description {
    top: 70px;
    font-size: 0.7em;
    font-family: arial;
    font-style: italic;
    width: 56%;
    margin: 0 auto;
}

.wedding-info .rsvp {
    top: 100px;
    color: red;
}

.wedding-info .tag {
    top: 120px;
    font-size: 0.8em;
}

/* Story Page */

.story {
    font-size: 0.7em;
    overflow: hidden;
    height: 100%;
    margin: 30px 45px;
    box-sizing: border-box;
    text-align: left;
}

.story .page {
    position:absolute;
    opacity: 0;
}

.story .page.shown{
    opacity: 1;
}

/* Contact Page */

.email-info, .email {
    top: 20px;
    font-size: 0.8em;
}

.email {
    font-weight: bold;
}

.form-info {
    top: 40px;
    font-size: 0.7em;
}

.contact-inputs {
    top: 45px;
}

.contact-inputs input, .contact-inputs textarea {
    display: block;
    margin: 3px auto;
    font-family: arial;
}

.contact-inputs input[type=text], .contact-inputs input[type=email], .contact-inputs textarea {
    width: 218px;
    border-style: solid;
    border-color: black;
    border-width: 1px;
    border-radius: 2px;
    padding: 2px;
}

.contact-inputs textarea {
    height: 60px;
}

/* Home Page */

.img-container {
    margin: 0 auto;
}

.img-container img {
    display: block;
    margin: 0 auto;
    width: 600px;
}

.img-container .circle {
    width: 350px;
    height: 350px;
}

footer {
    text-align: center;
}

@media only screen and (max-width: 768px) {
    .content-container {
        max-width: 600px;
    }

    .menu-button {
        display: block;
    }

    .img-container img {
        width: 400px;
    }

    .nav-container {
        display: block;
        top: 40px;
        right: -150px;
        padding: 0;
    }

    .nav-active .nav-container {
        right: 0;
    }

    .logo {
        display: none;
    }

    main {
        margin: 0;
    }
}

@media only screen and (max-width: 375px) {
    .img-container img {
        width: 300px;
    }
}

